<resources>
    <string name="app_name">MyWeatherAppAdvanced</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Anton Gerasimov</string>
    <string name="nav_header_subtitle">geraa1985@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_weather">Weather</string>
    <string name="menu_list">List of cities</string>
    <string name="menu_settings">Settings</string>

    <string name="feels_like">feels like: </string>

    <string name="weather_image_description" translatable="false">weatherImage</string>
    <string name="image_humidity_content_description" translatable="false">Image Humidity</string>
    <string name="image_wind_speed_content_description" translatable="false">imageWindSpeed</string>
    <string name="image_pressure_content_description" translatable="false">imagePressure</string>
    <string name="image_wind_direct_content_description" translatable="false">imageWindDirect</string>
    <string name="temperature_units">Temperature units</string>
    <string name="deg_c" translatable="false">°C</string>
    <string name="deg_f" translatable="false">°F</string>
    <string name="pressure_units">Pressure units</string>
    <string name="gpa">gPa</string>
    <string name="mm">mm</string>
    <string name="wind_speed_units">Wind speed units</string>
    <string name="m_s">m/s</string>
    <string name="km_h">km/h</string>
    <string name="theme">Theme</string>
    <string name="day">day</string>
    <string name="night">night</string>
    <string name="deg" translatable="false">°</string>
    <string name="percent" translatable="false">%</string>
    <string name="ok" translatable="false">OK</string>
    <string name="enter_city">Enter city</string>
    <string name="wrong_name_message">Wrong city name</string>
    <string name="delete">Delete</string>
    <string name="clear_all">Clear all</string>
    <string name="yandex" translatable="false">Yandex</string>
    <string name="wikipedia" translatable="false">Wikipedia</string>
    <string name="errorMessage">\ - most likely is not a city on the planet Earth. Study the globe and enter the correct city.\</string>
    <string name="error_title">Error</string>
    <string name="sort_by_date">sort by date</string>
    <string name="sort_by_ncity">sort by\ncity</string>
    <string name="sort_by_temp">sort by temp</string>
    <string name="current_position">current_position</string>
    <string name="map">Map</string>
    <string name="yandex_map">Yandex map</string>
    <string name="yandex_map_key" translatable="false">dd65d3a2-28c5-40ac-b740-fb500964760f</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="server_client_id" translatable="false">"109084160634-chhk079h2n1rqoer6q6o054htl4ad0t2.apps.googleusercontent.com"</string>
</resources>