<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/temperature_units"
            android:textSize="@dimen/settings_text_size"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RadioButton
                android:id="@+id/degC"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/radiobutton_height"
                android:gravity="center"
                android:text="@string/deg_c"
                android:textSize="@dimen/settings_text_size" />

            <RadioButton
                android:id="@+id/degF"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/radiobutton_height"
                android:gravity="center"
                android:text="@string/deg_f"
                android:textSize="@dimen/settings_text_size" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_header_margin_top"
            android:gravity="center"
            android:text="@string/pressure_units"
            android:textSize="@dimen/settings_text_size"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgPress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RadioButton
                android:id="@+id/gPa"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/radiobutton_height"
                android:gravity="center"
                android:text="@string/gpa"
                android:textSize="@dimen/settings_text_size" />

            <RadioButton
                android:id="@+id/mm"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/radiobutton_height"
                android:gravity="center"
                android:text="@string/mm"
                android:textSize="@dimen/settings_text_size" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_header_margin_top"
            android:gravity="center"
            android:text="@string/wind_speed_units"
            android:textSize="@dimen/settings_text_size"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgWind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RadioButton
                android:id="@+id/ms"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/radiobutton_height"
                android:gravity="center"
                android:text="@string/m_s"
                android:textSize="@dimen/settings_text_size" />

            <RadioButton
                android:id="@+id/kmh"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/radiobutton_height"
                android:gravity="center"
                android:text="@string/km_h"
                android:textSize="@dimen/settings_text_size" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_header_margin_top"
            android:gravity="center"
            android:text="@string/theme"
            android:textSize="@dimen/settings_text_size"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RadioButton
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/radiobutton_height"
                android:gravity="center"
                android:text="@string/day"
                android:textSize="@dimen/settings_text_size" />

            <RadioButton
                android:id="@+id/night"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/radiobutton_height"
                android:gravity="center"
                android:text="@string/night"
                android:textSize="@dimen/settings_text_size" />
        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>