<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.list.CitiesListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sortByDate"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/sort_by_date"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/design_default_color_on_primary"
            android:backgroundTint="@color/cardview_shadow_start_color"
            tools:ignore="MissingClass,PrivateResource" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sortByCity"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/sort_by_ncity"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/design_default_color_on_primary"
            android:backgroundTint="@color/cardview_shadow_start_color"
            tools:ignore="MissingClass,PrivateResource" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sortByTemperature"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/sort_by_temp"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/design_default_color_on_primary"
            android:backgroundTint="@color/cardview_shadow_start_color"
            tools:ignore="MissingClass,PrivateResource" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/citiesRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>