<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.weather.WeatherFragment">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        tools:text="City name" />

    <TextView
        android:id="@+id/mainTemperature"
        android:layout_width="@dimen/main_info_width"
        android:layout_height="@dimen/main_info_height"
        android:gravity="center"
        android:textSize="@dimen/main_temperature_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName"
        app:layout_constraintVertical_bias="0.02"
        tools:text="+23°C" />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="@dimen/main_info_width"
        android:layout_height="@dimen/main_info_height"
        android:contentDescription="@string/weather_image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName"
        app:layout_constraintVertical_bias="0.02"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/weatherDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherImage"
        tools:text="Weather description" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherDescription">

        <TextView
            android:id="@+id/feelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/feels_like"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/valueFeelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            tools:text="+21°C" />
    </TableRow>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageHumidity"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/image_humidity_content_description"
                    android:src="@drawable/ic_humidity" />

                <TextView
                    android:id="@+id/valueHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/options_text_size"
                    tools:text="68%" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end">

                <TextView
                    android:id="@+id/valueWindSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:textSize="@dimen/options_text_size"
                    tools:text="3 m/s" />

                <ImageView
                    android:id="@+id/imageWindSpeed"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/image_wind_speed_content_description"
                    android:src="@drawable/ic_wind" />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imagePressure"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/image_pressure_content_description"
                    android:src="@drawable/ic_pressure" />

                <TextView
                    android:id="@+id/valuePressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:textSize="@dimen/options_text_size"
                    tools:text="765 mm" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end">

                <TextView
                    android:id="@+id/valueWindDirect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:textSize="@dimen/options_text_size"
                    tools:text="270°" />

                <ImageView
                    android:id="@+id/imageWindDirect"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/image_wind_direct_content_description"
                    android:src="@drawable/ic_wind_direct" />
            </TableRow>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/yandexImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/yandex"
        android:src="@drawable/yandex"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/wikiImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/wikipedia"
        android:src="@drawable/wikipedia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.example.myweatherappadvanced.customview.Thermometer
        android:id="@+id/thermometer"
        android:layout_width="20dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wikiImage"
        app:layout_constraintStart_toEndOf="@+id/yandexImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>